# SCALEX

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  SCALEX.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yaml
docs/gallery/: README.md  build_gallery.py
docs/source/: conf.py  contributors.rst  index.rst  installation.rst  news.rst  usage.rst
docs/source/api/: index.rst  net.rst  scale.SCALE.rst  scale.data.BatchSampler.rst  scale.data.SingleCellDataset.rst  scale.data.batch_scale.rst  scale.data.concat_data.rst  scale.data.load_data.rst  (+21 more)
experiments/: LISI.ipynb  NMI-ARI.ipynb  Silhouette_score & batch_entropy_mixing_score.ipynb  dirichlet_regression.ipynb  overcorrection_score.ipynb  projection.ipynb
extensions/scale/: __init__.py  dataset.py
scale/: __init__.py  data.py  function.py  metrics.py  plot.py
scale/net/: layer.py
scalex/: __init__.py  analysis.py  data.py  function.py  logger.py  plot.py  specifity.py  utils.py
scalex/atac/: bedtools.py  fragments.py  read_modisco.py  shap.py  signal.py
scalex/io/: __init__.py  dataset.py  load.py  preprocess.py
scalex/linkage/: joint.py  linkage.py  scE2G.py  utils.py
scalex/net/: loss.py  utils.py  vae.py
scalex/pl/: GWASVariantsTrack.py  ShapTrack.py  _R.py  __init__.py  _dotplot.py  _genometrack.py  _heatmap.py  _jaccard.py  _pygenometrack.py  _sankey.py  _stackedplot.py  _utils.py  analysis.py  correlation.py  embedding.py  plot.py  trackplot.py  tracks.py  variant.py
scalex/pp/: __init__.py  _markers_db.py  annotation.py  celltype.py  e2g.py  enrichment.py  markers.py
scalex/resources/: __init__.py
scalex/tl/: __init__.py  cluster.py
tests/: conftest.py  test_scalex.py
third_parties/: BBKNN.py  Conos.R  DESC.py  FastMNN.R  Harmony.R  LIGER.R  Raw.py  Scanorama.py  Seurat_v3.R  online_iNMF.R  scVI.py
(+31 files in other folders)
